Bug 489234 - Replace new Integer(int) with Integer.valueOf() in eclipse.platform.ui plug-ins
org.eclipse.ui.workbench

Change-Id: I26c2e13a4a2dfad265a920d4d01fcae26e6238ed
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>